--- a/cicom-app/sidenav.html
+++ b/cicom-app/sidenav.html
@@ -18,7 +18,7 @@
         </li>
     </ul>
 
-    <button id="logoutButton" ng-click="sidenav.logout()">
+    <button class="btn btn-warning" id="logoutButton" ng-click="sidenav.logout()">
         <p class="titleItem">Logout</p>
     </button>
     <i class="fa fa-window-close" aria-hidden="true"></i>
