--- a/cicom-app/index.html
+++ b/cicom-app/index.html
@@ -51,6 +51,8 @@
   <script src="node_modules/ng-csv/build/ng-csv.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
+  <script src="https://unpkg.com/angular-datetime-input"></script>
 
   <!-- Scripts de la aplicacion -->
   <script src="js/appRouter.js"></script>
