--- a/cicom-app/index.html
+++ b/cicom-app/index.html
@@ -27,6 +27,7 @@
   <!-- custom -->
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
   
