Create and update users left, log activity left. New changes pending

--- a/cicom-app/sidenav.html
+++ b/cicom-app/sidenav.html
@@ -17,6 +17,10 @@
             <i class="fa fa-pencil" aria-hidden="true"></i>
             <p class="titleItem">Temas y Categorías</p>
         </li>
+        <li class="barButton" id="users" ng-class="sidenav.setActive(3)" ng-click="sidenav.getOut(3)">
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <p class="titleItem">Usuarios</p>
+        </li>
     </ul>
 
     <button class="btn btn-warning" id="logoutButton" ng-click="sidenav.logout()">
