--- a/cicom-app/index.html
+++ b/cicom-app/index.html
@@ -31,6 +31,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
   <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
   
+  
 </head>
 
 <body>
@@ -43,13 +44,14 @@
     
   </div>
 
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="node_modules/ng-csv/build/ng-csv.min.js"></script>
+  <script src="node_modules/angular-js-xlsx/angular-js-xlsx.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
