--- a/cicom-app/index.html
+++ b/cicom-app/index.html
@@ -51,7 +51,7 @@
   <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
   <script src="bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="node_modules/ng-csv/build/ng-csv.min.js"></script>
-  <script src="node_modules/angular-js-xlsx/angular-js-xlsx.js"></script>
+  <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/angularUtils-pagination/dirPagination.js"></script>
