--- a/cicom-app/index.html
+++ b/cicom-app/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CMS CICOM</title>
+  <title>MediaTIC</title>
 
 
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,700'>
