--- a/cicom-app/sidenav.html
+++ b/cicom-app/sidenav.html
@@ -1,7 +1,7 @@
 <div class="sideNav">
     <div class="titleContainer">
         <i class="fa fa-universal-access" aria-hidden="true"></i>
-        <h3 class="sideNavTitle">MEDIATIC CMS</h3>
+        <h3 class="sideNavTitle">MediaTIC CMS</h3>
     </div>
     <ul class="actionList">
         <li class="barButton" id="news" ng-class="sidenav.setActive(0)" ng-click="sidenav.getOut(0)">
